# scim-array

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  configure.scan  libtool  test.cpp
.deps/: array_la-ArrayCIN.Plo  array_la-scim_array_imengine.Plo
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: ArraySpecial.cin.old  Makefile  Makefile.am  Makefile.in  array-phrases.cin  array-shortcode.cin  array-special.cin  array30.cin  array30.cin.old
intl/: Makefile
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  ko.gmo  ko.po  nl.gmo  nl.po  scim-array.pot  zh_TW.gmo  zh_TW.po
src/: ArrayCIN.cpp  ArrayCIN.h  Makefile  Makefile.am  Makefile.in  scim_array_imengine.cpp  scim_array_imengine.h  scim_array_imengine.loT  scim_array_imengine_setup.cpp
src/.deps/: array_imengine_setup_la-scim_array_imengine_setup.Plo  array_la-ArrayCIN.Plo  array_la-scim_array_imengine.Plo
